# dbnodes

./: .gitignore  CMakeLists.txt  config.h.in  dbnodes.icns  dbnodes.ini  main.cpp  res.qrc
content/: startup.txt  startup_macos.txt
dev-scripts/: install-resources.py
src/: helper.cpp  helper.h
src/Abstract/: AbstractModal.cpp  AbstractModal.h  AbstractNode.cpp  AbstractNode.h  AbstractRelationView.cpp  AbstractRelationView.h  AbstractSettingModal.cpp  AbstractSettingModal.h  CMakeLists.txt  DrawableWidget.cpp  DrawableWidget.h  IHasPathConnectors.h  JsonObject.cpp  JsonObject.h  StructDictionary.h
src/Dictionaries/: CMakeLists.txt  DbTableTypesDictionary.h  DbTableTypesFkDictionary.h  DbTableTypesIndexDictionary.h  MinimapPositionsDictionary.h  OpenFileExceptionsDictionary.h  RelationMakerErrorsDictionary.h  RelationPositionsDictionary.h  RelationTypesDictionary.h  SaveFileTypesDictionary.h  StylesDictionary.h
src/Modals/: CMakeLists.txt  ConfirmCloseProject.cpp  ConfirmCloseProject.h  ExceptionModal.cpp  ExceptionModal.h  Finder.cpp  Finder.h  MinimapSettings.cpp  MinimapSettings.h  NewProject.cpp  NewProject.h  RelationMaker.cpp  RelationMaker.h  Settings.cpp  Settings.h  TableConstructor.cpp  TableConstructor.h  TableRename.cpp  TableRename.h
src/Nodes/: CMakeLists.txt  TableNode.cpp  TableNode.h
src/Nodes/Table/: Column.cpp  Column.h
src/Relations/: CMakeLists.txt  Relation.cpp  Relation.h  RelationFactory.cpp  RelationFactory.h  RelationProvider.cpp  RelationProvider.h
src/Relations/RelationProviders/: DeleteRelationButtonProvider.cpp  DeleteRelationButtonProvider.h  RelationLinkProvider.cpp  RelationLinkProvider.h
src/Relations/RelationViews/: DeleteRelationButton.cpp  DeleteRelationButton.h  RelationLink.cpp  RelationLink.h
src/Relations/RelationViews/Path/: PathPoint.cpp  PathPoint.h
src/Saving/: CMakeLists.txt  FileResolver.h  SaveManager.cpp  SaveManager.h
src/Saving/Files/: DbnFileResolver.cpp  DbnFileResolver.h  ProjectListFileResolver.cpp  ProjectListFileResolver.h
src/Saving/Files/DbnFileStruct/: ColumnObject.h  ProjectObject.h  ProjectParametersObject.h  RelationObject.h  RelationPathPointObject.h  TableObject.h
src/Saving/Files/ProjectsListStruct/: ProjectDataObject.h  RootObject.h
src/Settings/: CMakeLists.txt  MainSettings.cpp  MainSettings.h
src/Utils/: AbstractUtil.cpp  AbstractUtil.h  CMakeLists.txt
src/Utils/ListMoving/: Moving.cpp  Moving.h
src/Utils/MultipleSelection/: Repository.cpp  Repository.h  Selectable.cpp  Selectable.h
src/Utils/RelationPath/: Render.cpp  Render.h
src/Utils/String/: StrUtil.cpp  StrUtil.h
src/Utils/TableGenerator/: TableGeneratorUtil.cpp  TableGeneratorUtil.h
src/Widgets/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  Workarea.cpp  Workarea.h
src/Widgets/Menus/: RecentMenu.cpp  RecentMenu.h
src/Widgets/Minimap/: MinimapWidget.cpp  MinimapWidget.h  MinimapWorkingArea.cpp  MinimapWorkingArea.h  MovableRect.cpp  MovableRect.h
src/Widgets/StartupWidget/: Hints.cpp  Hints.h  MainWidget.cpp  MainWidget.h  Menu.cpp  Menu.h  Project.cpp  Project.h
styles/dark/: button.qss  buttonWithIcon.qss  colorCorrector.qss  column.qss  columnClose.qss  columnIsNull.qss  columnTitle.qss  columnTypes.qss  deleteArrowButton.qss  fkColumn.qss  fkColumnIsNull.qss  fkColumnTitle.qss  main.qss  minimapWidget.qss  minimapWorkingArea.qss  movableRect.qss  nodeNameLabel.qss  outline.qss  pathPoint.qss  pkColumn.qss  pkColumnTitle.qss  relationLink.qss  relationLinkDeleteButton.qss  relationLinkLabel.qss  settingSpinBox.qss  settingsCheckBox.qss  startupMenuItem.qss  subtitle.qss  table.qss  tableList.qss  tableMenu.qss  tableTitle.qss  title.qss  workAreaMenu.qss
styles/light/: buttonWithIcon.qss  colorCorrector.qss  column.qss  columnClose.qss  columnIsNull.qss  columnKeyIcon.qss  columnTitle.qss  columnTypes.qss  deleteArrowButton.qss  fkColumn.qss  fkColumnIsNull.qss  fkColumnTitle.qss  lineEditError.qss  main.qss  minimapWidget.qss  minimapWorkingArea.qss  nodeNameLabel.qss  outline.qss  pathPoint.qss  pkColumn.qss  pkColumnTitle.qss  relationLink.qss  relationLinkDeleteButton.qss  relationLinkLabel.qss  settingsComboBox.qss  startupMenuItem.qss  startupWidget.qss  subtitle.qss  table.qss  tableList.qss  tableMenu.qss  tableTitle.qss  title.qss  workAreaMenu.qss
