set(LIBRARY_NAME Settings)

set(RESOURCES
        MainSettings.cpp
        MainSettings.h)

add_library(${LIBRARY_NAME} STATIC ${RESOURCES})

set(REQUIRED_LIBS_QUALIFIED Qt${QT_VERSION}::Core)

# INCLUDE PROJECT SUBDIRECTORIES
set(PROJECT_DIRECTORIES)

# INCLUDE PROJECT LIBS
set(PROJECT_LIBS)

include_directories(${CMAKE_BINARY_DIR})
target_include_directories(${LIBRARY_NAME} PUBLIC ${PROJECT_DIRECTORIES})
target_link_libraries(${LIBRARY_NAME} ${REQUIRED_LIBS_QUALIFIED} ${PROJECT_LIBS})